--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "telegram-bot",
   "version": "1.0.0",
-  "description": "Random Number Selector Telegram Bot",
+  "description": "A Telegram bot using Node.js",
   "main": "bot.js",
-  "type": "module",
   "scripts": {
-    "start": "node bot.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "engines": {
+    "node": ">=14.x"
+  },
   "dependencies": {
-    "express": "^4.21.0",
-    "node-fetch": "^3.3.2",
-    "telegraf": "^4.16.3"
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
+    "axios": "^0.21.1"
   }
 }
